      search paths. Thanks to Helmut Grohne for the initial patch and
      report.  (Closes: #882684)
    + [CL] Raise the certainty of multiarch-foreign-shared-library from
      "wild guess" to "possible" on the suggestion of Helmut Grohne.
    + [CL] Test for packages shipping "gschemas.compiled" files. Thanks
      to Andreas Beckmann for the idea.  (Closes: #884142)
  * checks/python.pm:
    + [CL] Also check for packages installing modules called "site" or
      "docs" into the global namespace.  (Closes: #769365)
  * checks/scripts.desc:
    + [CL] Update description of python-script-but-no-python-dep to refer
      to ${python3:Depends}. Thanks to Mattia Rizzolo.  (Closes: #660718)
  * checks/source-copyright.desc:
    + [CL] Update description of source-includes-file-in-files-excluded
      to clarify the potential problem and to reference the relevant
      wishlist bug against git-buildpackage.
  * checks/python.pm:
    + [CL] Clarify that new-package-should-not-package-python2-module
      triggers when there is a single changelog entry as well as providing
      general guidance where upstreams have not ported to Python 3 yet.

  * commands/lintian.pm:
    + [CL] Correct parsing of "jobs=42" in lintianrc. If specified, it
      would be coerced to a boolean resulting in a value of 1.
    + [CL] Allow the tag display limit to be configured via the
      "--tag-display-limit" command-line argument or "tag-display-limit"
      in lintianrc.  (Closes: #813525)
    + [CL] Make -v imply --no-tag-display-limit.  (Closes: #812756)

  * doc/lintianrc.example:
    + [CL] Add missing "jobs" entry.

 -- Chris Lamb <lamby@debian.org>  Thu, 07 Dec 2017 16:51:09 +0000

lintian (2.5.62) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - invalid-potfiles-in

  * checks/changelog-file.pm:
    + [CL] Correct operator precedence in "epoch-change-without-comment"
      to prevent a false positive when an epoch is present but is unchanged