@@ -2,6 +2,7 @@ etc
 usr/bin
 usr/doc
 usr/share/foo
+usr/share/fonts/X11/misc
 usr/share/glib-2.0/schemas
 usr/share/man/man1/random
 var/catman
