@@ -16,6 +16,8 @@ lintian (2.5.63) UNRELEASED; urgency=medium
       "wild guess" to "possible" on the suggestion of Helmut Grohne.
     + [CL] Test for packages shipping "gschemas.compiled" files. Thanks
       to Andreas Beckmann for the idea.  (Closes: #884142)
+    + [CL] Warn if a package ships compiled font files. Thank you to
+      Andreas Beckmann for the report.  (Closes: #884165)
   * checks/python.pm:
     + [CL] Also check for packages installing modules called "site" or
       "docs" into the global namespace.  (Closes: #769365)
